--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@types/lodash": "^4.14.202",
+    "lodash": "^4.17.21",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
