--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Typecheck
-        run: npm run typecheck
+        run: npm run typecheck -- -p typecheck-tsconfig.json
 
       - name: Lint
         run: npm run lint
