--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Generate Prisma Types
+        run: npx prisma generate
+
       - name: Typecheck
         run: npm run typecheck -- -p typecheck-tsconfig.json
 
