--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Generate Prisma Types
-        run: npm postinstall
+        run: npm run postinstall
 
       - name: Typecheck
         run: npm run typecheck -- -p typecheck-tsconfig.json
