--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "dev": "next dev",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate --schema/prod-schema.prisma",
     "lint": "next lint",
     "start": "next start",
     "typecheck": "tsc --noEmit"
