--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "prisma": {
-    "seed": "node seed-mock-data/main.js"
-  },
   "scripts": {
+    "seed": "node seed-mock-data/main.js",
     "build": "next build",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
