--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-grid-layout": "^1.4.4",
     "react-hook-form": "^7.49.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
