--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@types/lodash": "^4.14.202",
+    "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
@@ -36,6 +37,7 @@
     "react-hot-toast": "^2.4.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "use-immer": "^0.9.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
