--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hot-toast": "^2.4.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "three": "^0.161.0",
     "use-immer": "^0.9.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
@@ -47,6 +48,7 @@
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/three": "^0.161.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
