--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@hookform/resolvers": "^3.3.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
+    "@react-three/drei": "^9.97.6",
+    "@react-three/fiber": "^8.15.16",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-query": "^4.36.1",
